@@ -3,6 +3,8 @@
   Users side :
   ------------
     # The 'populate' scripts could failed on menu configuration in some cases.
+    # There was issue when a FileRef is creating when a CremeModel is deleted:
+      the path could be too long to be stored by the FileRef, which caused an error.
 
 
 == Version 2.6.8 ==
